// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI state components visual snapshots > renders empty state with CTA > empty-state 1`] = `
<div
  class="flex flex-col items-center px-6 py-12 text-center"
>
  <div
    class="mb-4 flex h-12 w-12 items-center justify-center rounded-full bg-muted text-muted-foreground"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-inbox h-6 w-6"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="22 12 16 12 14 15 10 15 8 12 2 12"
      />
      <path
        d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
      />
    </svg>
  </div>
  <h3
    class="text-base font-semibold text-foreground"
  >
    No leads yet
  </h3>
  <p
    class="mt-1.5 max-w-sm text-sm text-muted-foreground"
  >
    Start by creating your first lead
  </p>
  <button
    aria-busy="false"
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-control font-semibold ring-offset-background transition-all duration-200 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 select-none active:scale-[0.98] bg-primary text-primary-foreground shadow-[var(--button-shadow)] hover:bg-primary/90 hover:shadow-[var(--button-shadow-hover)] hover:[transform:translateY(var(--button-lift))] active:translate-y-0 h-10 min-h-[44px] px-5 py-2.5 text-sm mt-5"
  >
    Create lead
  </button>
</div>
`;

exports[`UI state components visual snapshots > renders error state with retry CTA > error-state 1`] = `
<div
  class="flex flex-col items-center px-6 py-12 text-center"
  role="alert"
>
  <div
    class="mb-4 flex h-12 w-12 items-center justify-center rounded-full bg-destructive/10 text-destructive"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-triangle-alert h-6 w-6"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
      />
      <path
        d="M12 9v4"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
  </div>
  <h3
    class="text-base font-semibold text-foreground"
  >
    Failed to load
  </h3>
  <p
    class="mt-1.5 max-w-sm text-sm text-muted-foreground"
  >
    Please check your internet connection
  </p>
  <button
    aria-busy="false"
    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-control font-semibold ring-offset-background transition-all duration-200 ease-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 select-none active:scale-[0.98] border border-border bg-card/80 hover:bg-accent/70 hover:text-accent-foreground hover:border-primary/45 hover:shadow-soft hover:[transform:translateY(var(--button-lift))] active:translate-y-0 h-10 min-h-[44px] px-5 py-2.5 text-sm mt-5"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-refresh-cw mr-2 h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
      />
      <path
        d="M21 3v5h-5"
      />
      <path
        d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
      />
      <path
        d="M8 16H3v5"
      />
    </svg>
    Retry
  </button>
</div>
`;

exports[`UI state components visual snapshots > renders loading states variants > loading-skeleton-cards 1`] = `
<div
  aria-busy="true"
  class="grid grid-cols-1 gap-3"
>
  <div
    class="space-y-3 rounded-card border border-border bg-card p-5"
  >
    <div
      class="animate-pulse rounded-md bg-muted h-5 w-2/5"
    />
    <div
      class="animate-pulse rounded-md bg-muted h-4 w-3/4"
    />
    <div
      class="animate-pulse rounded-md bg-muted h-10 w-full"
    />
  </div>
  <div
    class="space-y-3 rounded-card border border-border bg-card p-5"
  >
    <div
      class="animate-pulse rounded-md bg-muted h-5 w-2/5"
    />
    <div
      class="animate-pulse rounded-md bg-muted h-4 w-3/4"
    />
    <div
      class="animate-pulse rounded-md bg-muted h-10 w-full"
    />
  </div>
</div>
`;

exports[`UI state components visual snapshots > renders loading states variants > loading-skeleton-list 1`] = `
<div
  aria-busy="true"
  class="divide-y divide-border rounded-card border border-border bg-card"
>
  <div
    class="flex items-center gap-3 p-4"
  >
    <div
      class="animate-pulse bg-muted h-10 w-10 shrink-0 rounded-full"
    />
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="animate-pulse rounded-md bg-muted h-4 w-1/3"
      />
      <div
        class="animate-pulse rounded-md bg-muted h-3 w-2/3"
      />
    </div>
  </div>
  <div
    class="flex items-center gap-3 p-4"
  >
    <div
      class="animate-pulse bg-muted h-10 w-10 shrink-0 rounded-full"
    />
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="animate-pulse rounded-md bg-muted h-4 w-1/3"
      />
      <div
        class="animate-pulse rounded-md bg-muted h-3 w-2/3"
      />
    </div>
  </div>
</div>
`;

exports[`UI state components visual snapshots > renders loading states variants > loading-spinner 1`] = `
<div
  class="flex flex-col items-center justify-center gap-3 py-12 text-muted-foreground"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle h-6 w-6 animate-spin text-primary"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
  <p
    class="text-sm"
  >
    Loading records
  </p>
</div>
`;
